@@ -2,6 +2,7 @@ Version 1.0.4
 ~~~~~~~~~~~~~
 * Post DiFX-1.5.3
 * Fix problem with job generation convergence
+* Force v2d file to start with a letter
 
 Version 1.0.3
 ~~~~~~~~~~~~~
